--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -8,14 +8,26 @@
 @import "./mixins/browser-specific-properties.scss";
 @import "./mixins/transitions";
 
-// Components imports
+// Reusable components imports
 @import "./components/reusable/boxed-view";
 @import "./components/reusable/button";
 @import "./components/reusable/image";
 @import "./components/reusable/wrapper";
 @import "./components/reusable/link";
 
+// Landing page
+
 @import "./components/landing-page/landing-page";
 @import "./components/landing-page/landing-page__postcontent";
 @import "./components/landing-page/landing-page--clicked";
 @import "./components/landing-page/landing-page--done";
+
+// About
+
+@import "./components/about/about";
+
+// Contact
+
+// Features
+
+// Portfolio
