--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -17,13 +17,15 @@ a {
 }
 
 html {
+    background-color: #111;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     font-size: 62.5%;
 }
 
 body {
-    background-color: $body-default-background;
+    // background-color: $body-default-background;
+    background-color: #111;
     font-family: $body-default-font-family;
     font-size: $base-font-size;
     -webkit-font-smoothing: antialiased;
