Too many changes for this message.

--- a/src/stylesheets/components/about/_about.scss
+++ b/src/stylesheets/components/about/_about.scss
@@ -1,11 +1,13 @@
 .about {
-    background-color: #111;
-    min-height: 100vh;
-    overflow-x: hidden;
-    padding-bottom: 12rem;
-    position: relative;
-    text-align: center;
-    width: 100vw;
+    & {
+        background-color: #111;
+        min-height: 100vh;
+        overflow-x: hidden;
+        padding-bottom: 12rem;
+        position: relative;
+        text-align: center;
+        width: 100vw;
+    }
 
     &:before {
         content: "";
@@ -20,61 +22,84 @@
         background-color: transparent;
     }
 
-    // &--transition {
-    //     &:before {
-    //         content: "";
-    //         position: absolute;
-    //         z-index: 1;
-    //
-    //         top: 0;
-    //         right: 0;
-    //         bottom: 0;
-    //         left: 0;
-    //
-    //         background-color: transparent;
-    //     }
-    // }
-
     &__title {
         border-bottom: 2px solid $white;
         color: $white;
         display: inline-block;
         font-family: "Passion One", "Roboto", sans-serif;
-        font-size: 7rem;
+        font-size: 4.8rem;
         font-weight: 400;
-        letter-spacing: 7px;
-        margin-top: 7rem;
+        letter-spacing: 4px;
+        margin-top: 6rem;
         text-align: center;
         text-transform: uppercase;
+
+        @include atSmall {
+            font-size: 5.6rem;
+            letter-spacing: 5px;
+            margin-top: 6.5rem;
+        }
+
+        @include atMedium {
+            font-size: 6.4rem;
+            letter-spacing: 6px;
+            margin-top: 7rem;
+        }
+
+        @include atLarge {
+            font-size: 7.2rem;
+            margin-top: 8rem;
+        }
     }
 
     &__blocks {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
         margin: 0 auto;
         max-width: 120rem;
         width: 90%;
+
+        @include atMedium {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 95%;
+        }
     }
 
     &__block {
         border: 1px solid transparent;
-        margin-top: 6rem;
-        opacity: .4;
-        padding: 4rem 2.6rem;
+        margin-top: 3rem;
+        opacity: .9;
+        padding: 2.6rem 0;
         text-align: center;
         transition: border-color .8s ease, opacity .8s ease;
-        width: 48%;
 
-        cursor: pointer;
+        @include atSmall {
+            margin-top: 4rem;
+        }
 
-        * {
+        @include atMedium {
+            border: 1px solid transparent;
             cursor: pointer;
+            margin-top: 6rem;
+            opacity: .6;
+            padding: 3.2rem 1.8rem;
+            width: 48%;
+
+            * {
+                cursor: pointer;
+            }
+        }
+
+        @include atLarge {
+            opacity: .4;
+            padding: 4rem 2.6rem;
         }
 
         &:hover, &:focus, &:active {
-            border-color: $white;
-            opacity: 1;
+            @include atMedium {
+                border-color: $white;
+                opacity: 1;
+            }
         }
 
         &--left {
@@ -82,34 +107,80 @@
         }
 
         &--right {
-            float: right;
+
         }
 
         &__title {
             color: $white;
-            font-size: 3.4rem;
+            font-size: 2.4rem;
             font-weight: 400;
-            letter-spacing: 4px;
+            letter-spacing: 3px;
+
+            @include atSmall {
+                font-size: 2.8rem;
+            }
+
+            @include atMedium {
+                font-size: 3.1rem;
+            }
+
+            @include atLarge {
+                font-size: 3.4rem;
+            }
         }
 
         &__description {
             color: $white;
-            font-size: 1.8rem;
+            font-size: 1.6rem;
             font-weight: 400;
-            letter-spacing: 1px;
+            letter-spacing: .5px;
             line-height: 200%;
-            // margin-top: 4rem;
-            text-align: justify;
+            text-align: left;
+
+            @include atSmall {
+                font-size: 1.8rem;
+                letter-spacing: 1px;
+            }
+
+            @include atMedium {
+                text-align: justify;
+            }
+
+            @include atLarge {
+                font-size: 1.8rem;
+            }
 
             &--first {
-                margin-top: 4rem;
+                margin-top: 2.8rem;
+
+                @include atSmall {
+                    margin-top: 3.6rem;
+                }
+
+                @include atMedium {
+                    margin-top: 3.8rem;
+                }
+
+                @include atLarge {
+                    margin-top: 4rem;
+                }
             }
         }
 
         &__icon {
             display: inline-block;
-            margin: 3rem 0 2rem 0;
-            width: 8rem;
+            margin: 1.6rem 0 1.5rem 0;
+            width: 6rem;
+
+            @include atSmall {
+                margin: 2.3rem 0 1.5rem 0;
+                width: 6.6rem;
+            }
+
+            @include atMedium {
+                margin: 3rem 0 2rem 0;
+                width: 7.2rem;
+            }
 
             &--trustworthy {
 
@@ -118,30 +189,62 @@
             &--pricing {
 
             }
+
+            &--passionate {
+                width: 6.2rem;
+            }
         }
     }
 }
 
 .about__redirect {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0 auto;
-    margin-top: 8rem;
-    max-width: 100rem;
-    width: 90%;
+    & {
+        margin: 0 auto;
+        margin-top: 4rem;
+        max-width: 100rem;
+        width: 90%;
+    }
+
+    @media screen and (min-width: 920px) {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 8rem;
+    }
+
+    a {
+        width: 100%;
+
+        @media screen and (min-width: 920px) {
+            margin: 0 1%;
+            width: 31.33%;
+        }
+    }
 
     &__item {
         background-color: transparent;
         border: 1px solid $white;
         color: $white;
         cursor: pointer;
-        font-size: 2.2rem;
+        font-size: 1.8rem;
         font-weight: 500;
         letter-spacing: 3px;
-        padding: 2rem 8rem;
+        margin-bottom: 2rem;
+        padding: 2rem 2rem;
         text-transform: uppercase;
         transition: background-color .5s ease, color .5s ease;
+
+        @include atSmall {
+            font-size: 2rem;
+            padding: 2.2rem 2rem;
+        }
+
+        @media screen and (min-width: 920px) {
+            font-size: 2.2rem;
+            margin-bottom: 0;
+            width: 100%;
+            max-width: 40rem;
+        }
 
         &:hover, &:focus, &:active {
             background-color: $white;
@@ -152,13 +255,15 @@
 }
 
 .about__copyright {
-    background-color: #111;
-    bottom: 0;
-    padding: 3rem 0 1rem 0;
-    position: fixed;
-    text-align: center;
-    width: 100vw;
-    z-index: 999;
+    & {
+        background-color: #111;
+        bottom: 0;
+        padding: 3rem 6rem 1rem 6rem;
+        position: fixed;
+        text-align: center;
+        width: 100vw;
+        z-index: 999;
+    }
 
     &__text {
         color: $white;
