--- a/src/stylesheets/components/landing-page/_landing-page__postcontent.scss
+++ b/src/stylesheets/components/landing-page/_landing-page__postcontent.scss
@@ -9,7 +9,6 @@
     &__option {
         align-items: center;
         background-color: #222;
-        color: $white;
         cursor: pointer;
         display: flex;
         height: 25vh;
@@ -20,6 +19,10 @@
         transition: background-color .8s ease, transform 1.6s ease;
         width: 100vw;
         z-index: 100;
+
+        h3 {
+            color: $white;
+        }
 
         @include atSmall {
 
