Setup basic contact blocks, some more small changes and started contact form.

--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -35,9 +35,18 @@ body {
     word-wrap: break-word;
 }
 
-div, li, ul, ol, p, h1, h2, h3, h4, h5, input, form {
+div, li, ul, ol, p, h1, h2, h3, h4, h5 {
     color: $body-default-text-color;
     cursor: default;
+    font: inherit;
+    margin: 0;
+    outline: 0;
+    padding: 0;
+    vertical-align: baseline;
+}
+
+input, form {
+    color: $body-default-text-color;
     font: inherit;
     margin: 0;
     outline: 0;
@@ -49,11 +58,12 @@ input[type=text], input[type=email], input[type=password], textarea {
     background-color: #ffffff;
     border: 1px solid #000000;
     color: $body-default-text-color;
-    cursor: pointer;
+    cursor: text;
     font-family: $body-default-font-family;
 }
 
 button {
+    cursor: pointer;
     font-family: $body-default-font-family;
     outline: none;
 }
