--- a/src/stylesheets/components/about/_about.scss
+++ b/src/stylesheets/components/about/_about.scss
@@ -49,8 +49,8 @@
         }
 
         @include atLarge {
-            font-size: 6.4rem;
-            margin-top: 8rem;
+            // font-size: 6.4rem;
+            // margin-top: 8rem;
         }
 
         &:before {
