--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -34,6 +34,9 @@
 // Contact
 
 @import "./components/contact/contact";
+@import "./components/contact/contact__blocks";
+@import "./components/contact/contact__blocks__hover-block";
+@import "./components/contact/contact__message";
 
 // Features
 
