--- a/src/stylesheets/components/contact/_contact.scss
+++ b/src/stylesheets/components/contact/_contact.scss
@@ -1,4 +1,5 @@
 .contact {
+    background-color: $contact-background;
     padding-bottom: 12rem;
     position: relative;
     text-align: center;
