--- a/src/stylesheets/components/features/_features.scss
+++ b/src/stylesheets/components/features/_features.scss
@@ -1,4 +1,5 @@
 .features {
+    background-color: $features-background;
     padding-bottom: 100vh;
     position: relative;
     text-align: center;
