--- a/src/stylesheets/components/portfolio/_portfolio.scss
+++ b/src/stylesheets/components/portfolio/_portfolio.scss
@@ -1,4 +1,7 @@
 .portfolio {
+    background-color: $portfolio-background;
+    min-height: 100vh;
+    padding-bottom: 12rem;
     position: relative;
     text-align: center;
     width: 100%;
