--- a/src/stylesheets/components/contact/_contact__blocks__hover-block.scss
+++ b/src/stylesheets/components/contact/_contact__blocks__hover-block.scss
@@ -10,12 +10,130 @@
     transform: translateX(-100%);
     transition: transform .4s ease, visibility .4s ease;
 
-    background-color: red;
+    background-color: $white;
+    padding: 6rem 3rem;
 }
 
-.contact__blocks__block:hover {
+.contact__blocks__block--toggled {
     .contact__blocks__hover-block {
         transform: translateX(0);
         visibility: visible;
+    }
+}
+
+// .contact__blocks__block:hover, .contact__blocks__block:active {
+//     .contact__blocks__hover-block {
+//         transform: translateX(0);
+//         visibility: visible;
+//     }
+// }
+
+.contact__blocks__hover-block {
+    &__icon {
+        max-width: 8rem;
+
+        &--github {
+
+        }
+
+        &--linkedin {
+
+        }
+
+        &--skype {
+
+        }
+
+        &--twitter {
+            max-width: 8.5rem;
+        }
+
+        &--facebook {
+
+        }
+
+        &--email {
+            max-width: 10rem;
+        }
+    }
+
+    &__description {
+        font-size: 1.8rem;
+        letter-spacing: .5px;
+        line-height: 150%;
+        margin: 0 auto;
+        padding: 0 6rem;
+
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translateY(-1rem);
+        width: 100%;
+    }
+
+    &__button {
+        background-color: #f9f9f9;
+        border: 1.5px solid #222;
+        color: #222;
+        display: block;
+        font-family: "Roboto", sans-serif;
+        font-size: 1.8rem;
+        letter-spacing: 1.5px;
+        padding: 1.2rem 2rem;
+        position: absolute;
+        text-transform: uppercase;
+        transition: background-color .5s ease, color .5s ease;
+
+        &:hover {
+            background-color: #222;
+            color: $white;
+
+            a {
+                color: $white;
+            }
+        }
+
+        &--copy {
+            bottom: 3.6rem;
+            left: 6rem;
+
+            &:before {
+                color: #222;
+                content: "COPIED";
+                left: 0;
+                opacity: 1;
+                position: absolute;
+                text-align: center;
+                transform: translateY(-2rem);
+                visibility: hidden;
+                width: 100%;
+            }
+        }
+
+        &--visit {
+            bottom: 3.6rem;
+            right: 6rem;
+
+            a {
+                color: #222;
+                display: block;
+                transition: color .5s ease;
+            }
+        }
+
+        &--copied {
+            &:before {
+                opacity: 0;
+                transform: translateY(-6rem);
+                transition: transform .8s ease, opacity .8s ease;
+                visibility: visible;
+            }
+        }
+    }
+
+    &__input {
+        opacity: 0;
+        position: absolute;
+        left: -1000rem;
     }
 }
