--- a/src/stylesheets/components/landing-page/_landing-page__postcontent.scss
+++ b/src/stylesheets/components/landing-page/_landing-page__postcontent.scss
@@ -13,7 +13,7 @@
 
     &__option {
         align-items: center;
-        background-color: #222;
+        background-color: $landing-page-option-background;
         cursor: pointer;
         display: flex;
         min-height: 10rem;
@@ -26,29 +26,22 @@
         width: 100vw;
         z-index: 100;
 
-        @include atSmall {
-
-        }
-
         @include atMedium {
             min-height: 15rem;
             height: 50vh;
             width: 50vw;
         }
 
-        &:before {
-            content: "";
-            position: absolute;
-            // z-index: 101;
-            // top: 0;
-            // left: 0;
-            // bottom: 0;
-            // right: 0;
-            // background-color: $white;
+        &:hover, &:focus, &:active {
+            background-color: $landing-page-option-hover-background;
+        }
+
+        * {
+            cursor: pointer;
         }
 
         h3 {
-            color: $white;
+            color: $landing-page-option;
             font-size: 1.8rem;
             font-weight: 500;
             letter-spacing: 1.5px;
@@ -64,17 +57,11 @@
             }
         }
 
-        * {
-            cursor: pointer;
-        }
 
-        &:hover, &:focus, &:active {
-            background-color: #090909;
-        }
 
         &__1 {
             top: 0;
-            border-bottom: 2px solid $white;
+            border-bottom: 2px solid $landing-page-option-border-color;
 
             @include atSmall {
 
@@ -89,14 +76,14 @@
                 margin-top: -2px;
                 border: none;
 
-                // border: 2px solid $white;
+                // border: 2px solid $landing-page-option-border-color;
                 // border-left: none;
                 // border-top: none;
             }
         }
 
         &__2 {
-            border-bottom: 2px solid $white;
+            border-bottom: 2px solid $landing-page-option-border-color;
             top: 25%;
 
             @include atSmall {
@@ -112,14 +99,14 @@
                 margin-top: -2px;
                 border: none;
 
-                // border: 2px solid $white;
+                // border: 2px solid $landing-page-option-border-color;
                 // border-right: none;
                 // border-top: none;
             }
         }
 
         &__3 {
-            border-bottom: 2px solid $white;
+            border-bottom: 2px solid $landing-page-option-border-color;
             top: 50%;
 
             @include atSmall {
@@ -135,7 +122,7 @@
                 margin-top: 2px;
                 border: none;
 
-                // border: 2px solid $white;
+                // border: 2px solid $landing-page-option-border-color;
                 // border-bottom: none;
                 // border-left: none;
             }
@@ -158,7 +145,7 @@
                 margin-top: 2px;
                 border: none;
 
-                // border: 2px solid $white;
+                // border: 2px solid $landing-page-option-border-color;
                 // border-bottom: none;
                 // border-right: none;
             }
@@ -168,50 +155,50 @@
             transform: scale(1);
         }
 
-        &--choosed {
-            background-color: #090909;
-            border: none;
-            cursor: default;
-
-            height: 100vh;
-            top: 0;
-            transition: height 1.2s ease, top 1.2s ease;
-
-            z-index: 101;
-
-            @include atSmall {
-
-            }
-
-            @include atMedium {
-                height: 50vh;
-                top: 50%;
-                transition: transform 1.2s ease;
-                transform: scale(2);
-            }
-
-            &--1 {
-                top: 0;
-                transform-origin: 0 0;
-            }
-
-            &--2 {
-                top: 0;
-                transform-origin: 100% 0;
-            }
-
-            &--3 {
-                transform-origin: 0 100%;
-            }
-
-            &--4 {
-                transform-origin: 100% 100%;
-            }
-        }
-
-        &--not-choosed {
-            opacity: 0;
-            transition: opacity 1s ease;
-        }
+        // &--choosed {
+        //     background-color: #090909;
+        //     border: none;
+        //     cursor: default;
+        //
+        //     height: 100vh;
+        //     top: 0;
+        //     transition: height 1.2s ease, top 1.2s ease;
+        //
+        //     z-index: 101;
+        //
+        //     @include atSmall {
+        //
+        //     }
+        //
+        //     @include atMedium {
+        //         height: 50vh;
+        //         top: 50%;
+        //         transition: transform 1.2s ease;
+        //         transform: scale(2);
+        //     }
+        //
+        //     &--1 {
+        //         top: 0;
+        //         transform-origin: 0 0;
+        //     }
+        //
+        //     &--2 {
+        //         top: 0;
+        //         transform-origin: 100% 0;
+        //     }
+        //
+        //     &--3 {
+        //         transform-origin: 0 100%;
+        //     }
+        //
+        //     &--4 {
+        //         transform-origin: 100% 100%;
+        //     }
+        // }
+        //
+        // &--not-choosed {
+        //     opacity: 0;
+        //     transition: opacity 1s ease;
+        // }
     }
 }
